\name{NEWS}
\title{NEWS file for the \pkg{Uniquorn} bioconductor package }
\section{Changes in version 0.99.9 [2016-03-29]}{
    \subsection{Improved documentation}{
        \itemize{
            \item Minor documentation bugfixes.
        }
    }
}
\section{Changes in version 0.99.8 [2016-03-25]}{
    \subsection{Fixed Bug}{
        \itemize{
            \item General bugfixing.
        }
    }
}
\section{Changes in version 0.99.7 [2016-03-24]}{
    \subsection{Fixed Bug}{
        \itemize{
            \item Minor bugfix concerning output of CL identifications.
        }
    }
}
\section{Changes in version 0.99.6 [2016-03-23]}{
    \subsection{Fixed Bug}{
        \itemize{
            \item Minor bugfix concerning data parsing of CellMiner data.
        }
    }
}
\section{Changes in version 0.99.5 [2016-03-22]}{
    \subsection{Fixed Bug}{
        \itemize{
            \item Fixed a bug that lead to incorrect calculation of CoSMIC CLP CL mutation weights.
        }
    }
}
\section{Changes in version 0.99.4 [2016-03-16]}{
    \subsection{Added features}{
        \itemize{
            \item Minimum amount of matching mutations required for a positive prediction between query and training sample can now be manually adjusted in the 'identify_vcf_file' function using the parameter 'miminum_matching_mutations'
        }
    }
}

\section{Changes in version 0.99.3 [2016-03-02]}{
    \subsection{Fixed bugs}{
        \itemize{
            \item Fixed vigniette
        }
    }
}

\section{Changes in version 0.99.2 [2016-03-02]}{
    \subsection{Fixed bugs}{
        \itemize{
            \item Moved NEWS.Rd from 'Uniquorn' to 'Uniquorn/inst'
        }
    }
}

\section{Changes in version 0.99.1 [2016-03-02]}{
    \subsection{Fixed bugs}{
        \itemize{
            \item Fixed NEWS section
            \item Fixed unit testing
            \item Fixed the Vignette: replaced the github-dependent installation with the biocLite installation
        }
    }
}
